--- a/package.json
+++ b/package.json
@@ -12,6 +12,12 @@
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.11.1",
+    "react": "^15.3.0",
+    "react-dom": "^15.3.0",
     "webpack": "^1.13.1"
-  }
+  },
+  "scripts": {
+    "webpack-watch-build": "webpack -d --watch",
+    "webpack-unique-build" : "webpack -p"
+  },
 }
