--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Simple mention plugin for react",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "watch": "webpack -d --watch",
+    "build" : "webpack -p"
   },
   "author": "Xavier Lefevre",
   "license": "ISC",
@@ -15,9 +16,5 @@
     "react": "^15.3.0",
     "react-dom": "^15.3.0",
     "webpack": "^1.13.1"
-  },
-  "scripts": {
-    "webpack-watch-build": "webpack -d --watch",
-    "webpack-unique-build" : "webpack -p"
-  },
+  }
 }
