--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "lodash": "^4.14.1",
     "react": "^15.3.0",
     "react-dom": "^15.3.0",
+    "react-router": "^2.6.1",
     "style-loader": "^0.13.1"
   },
   "devDependencies": {
