--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "Simple mention plugin for react",
   "main": "index.js",
   "scripts": {
-    "watch": "webpack -d --watch",
-    "build": "webpack -p"
+    "build:package": "babel src --out-dir lib",
+    "watch:test": "webpack -d --watch",
+    "build:test": "webpack -p"
   },
   "author": "Xavier Lefevre",
   "license": "ISC",
@@ -19,6 +20,7 @@
     "style-loader": "^0.13.1"
   },
   "devDependencies": {
+    "babel-cli": "^6.11.4",
     "babel-loader": "^6.2.4",
     "babel-plugin-transform-runtime": "^6.12.0",
     "babel-preset-es2015": "^6.9.0",
